para_se_basear/Trab_Anna/CodeGeneration/Tests/Error/32.AMZ
void func(){
  object a = {int d : 1, int b : 2};
  object a = {int b: 2, int c: 3};
}
